[tool.poetry]
name = "dem_profiler"
version = "0.1.0"
description = ""
authors = ["yoshimoto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rasterio = "^1.3.8"
ipykernel = "^6.25.1"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
